--- a/user/top_up.html
+++ b/user/top_up.html
@@ -37,20 +37,20 @@
         <div class="flex-column center error">
             <div class="notice">
                 <div class="flex center bold">
-                    Invalid file format
+                    Insufficient paper
                 </div>
                 <div class="flex center bold">
-                    Please upload file has type of PDF, docx, csv, ...
+                    In order to use this feature, please buy more !!
                 </div>
             </div>
             <div class="flex center">
-                <img src="../400 Error Bad Request-rafiki.svg" style="width: 250px;" draggable="false">
+                <img src="../het_tien.png" style="width: 250px;" draggable="false">
             </div>
             <div class="flex center" style="margin: 20px 0; padding-bottom: 30px;">
                 <div onclick="history.back()">
                     <div id="kc-form-buttons" class="form-group">
                         <input type="hidden" id="id-hidden-input" name="credentialId" />
-                        <input style="width: 30em;" tabindex="4" class="retry center" name="logout" id="logout" type="submit" value="Click here to upload again"/>
+                        <input style="width: 30em;" tabindex="4" class="retry center" name="logout" id="logout" type="submit" value="Click here to continue again"/>
                     </div>
                 </div>
             </div>
