--- a/user/top_up.html
+++ b/user/top_up.html
@@ -13,7 +13,10 @@
                 <p style="padding: 0px 50px">Nguyễn Văn A</p>
             </div>
             <a href="../login.html">
-                <div class="logout center">LOG OUT</div>
+                <div id="kc-form-buttons" class="form-group">
+                    <input type="hidden" id="id-hidden-input" name="credentialId" />
+                    <input tabindex="4" class="logout center" name="logout" id="logout" type="submit" value="LOG OUT" />
+                </div>
             </a>
         </div>
         <div>
