--- a/user/print.html
+++ b/user/print.html
@@ -14,7 +14,6 @@
             </div>
             <a href="../login.html">
                 <div id="kc-form-buttons" class="form-group">
-                    <input type="hidden" id="id-hidden-input" name="credentialId" />
                     <input tabindex="4" class="logout center" name="logout" id="logout" type="submit" value="LOG OUT" />
                 </div>
             </a>
@@ -40,7 +39,7 @@
         <div>
             <div id="sort" class="flex box no-m center" style="width: fit-content;">
                 <div id="kc-form-buttons">
-                    <input style="padding: 5px;" type="search" id="id-hidden-input" name="credentialId" placeholder="Search (by ID)"/>
+                    <input type="search" id="id-hidden-input" name="credentialId" placeholder="Search (by ID)"/>
                 </div>
             </div>
             <div class="printerlist">
@@ -101,10 +100,9 @@
             </div>
         </div>
         <div class="flex center" style="margin-top: 100px;">
-            <a href="../login.html">
+            <a href="file.html">
                 <div id="kc-form-buttons" class="form-group">
-                    <input type="hidden" id="id-hidden-input" name="credentialId" />
-                    <input style="width: 250px;" tabindex="4" class="select center" name="logout" id="logout" type="submit" value="Select Printer"/>
+                    <input style="width: 250px;" tabindex="4" class="select center" type="submit" value="Select Printer"/>
                 </div>
             </a>
         </div>    
