--- a/user/file.html
+++ b/user/file.html
@@ -145,11 +145,11 @@
             </div>
             <div class="item">
                 <div class="flex center" style="margin: 20px 0; padding-bottom: 30px;">
-                    <div onclick="history.back()">
+                    <a href="properties.html">
                         <div id="kc-form-buttons" class="form-group">
                             <input style="width: 30em;" tabindex="4" class="retry center" type="submit" value="Upload"/>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>  
