--- a/user/success.html
+++ b/user/success.html
@@ -14,7 +14,6 @@
             </div>
             <a href="../login.html">
                 <div id="kc-form-buttons" class="form-group">
-                    <input type="hidden" id="id-hidden-input" name="credentialId" />
                     <input tabindex="4" class="logout center" name="logout" id="logout" type="submit" value="LOG OUT" />
                 </div>
             </a>
@@ -31,29 +30,58 @@
                 <div style="width: 100%; padding-right: 40px;" class="flex center">Menu of service</div>
             </div>
             <div class="select-dropdown flex" role="listbox" id="select-dropdown">
-                <li><a href="print.html">Print</a></li>
+                <li style=" border-top-left-radius: 3px; border-bottom-left-radius: 3px;" class="selected"><a href="print.html">Print</a></li>
                 <li><a href="log.html">Log</a></li>
                 <li><a href="pay.html">Payment</a></li>
                 <li style="border: none;"><a href="my.html">My Profile</a></li>
             </div>
         </div>
-        <div class="flex main" style="height: 100%;">
-            <div class="flex center info flex-column" style="grid-area: info;">
-                <div>Cấp bậc thành viên</div>
-                <div>Binh Nhất</div>
-                <div>Số lần in: 1</div>
-                <div>Lần truy cập gần nhất:</div>
-                <div>09/11/2023</div>
-            </div>
-            <div class="flex center flex-column" style="grid-area: display;">
-                <div>
-                    <div style="font-size: 5rem; font-weight: 600; grid-area: logo;">10:34</div>
-                </div>
-                <div>
-                    <img src="../HCMCUT.svg" style="width: 400px;" draggable="false">
+        <div class="flex-column center success">
+            <div class="notice-blue">
+                <div class="flex center bold">
+                    Congratulation!
                 </div>
             </div>
-        </div>
+            <div class="notice-info" style="padding-top: 10px;">
+                <div class="flex center flex-column" style="grid-area: lef;">
+                    <img src="../done.png" style="width: 150px;" draggable="false">
+                    <p>YOUR DOCUMENT IS READY!</p>
+                </div>
+                <div class="detail-box" style="grid-area: rig;">
+                    <div>
+                        <div style="grid-area: lef;">
+                            Printer ID:
+                        </div>
+                        <div style="grid-area: rig;">
+                            FA1234
+                        </div>
+                    </div>
+                    <div>
+                        <div style="grid-area: lef;">
+                            Loaction:
+                        </div>
+                        <div style="grid-area: rig;">
+                            B1-311
+                        </div>
+                    </div>
+                    <div>
+                        <div style="grid-area: lef;">
+                            Date (print done):
+                        </div>
+                        <div style="grid-area: rig;">
+                            7h00-07/01/2023
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex center" style="margin: 20px 0; padding-bottom: 30px;">
+                <a href="main.html">
+                    <div id="kc-form-buttons" class="form-group">
+                        <input style="width: 100px;" tabindex="4" class="retry center" type="submit" value="Done"/>
+                    </div>
+                </a>
+            </div>
+        </div>   
         <footer id="credit">
             <div style="grid-area: logo;" class="center flex"><img src="../logo.png" style="width: 100px;" draggable="false"></div>
             <div style="grid-area: name;" class="center flex"><h1>Student Smart Printing Service</h1></div>
