--- a/user/my.html
+++ b/user/my.html
@@ -58,7 +58,7 @@
                 <div style="grid-area: right;">Đường số 13,Phường Tân Thuận Đông, Quận 7, Tp. Hồ Chí Minh</div>
             </div>
             <div class="flex box" style="width: 500px">
-                <div style="padding-right: 20px;">You have 69 paper (A4) left</div>
+                <div style="padding-right: 20px;">You have <span id="totalPaper">0</span> paper (A4) left</div>
             </div>
         </div>
         <footer id="credit">
@@ -71,4 +71,18 @@
         </footer>
     </body>
     <script src="../main.js"></script>
+    <script>
+        // Function to update totalPaper on the page
+        function updateTotalPaperOnPage() {
+            var totalPaperElement = document.getElementById('totalPaper');
+            if (totalPaperElement) {
+                // Get totalPaper from Local Storage or set it to 0 if not present
+                var totalPaper = parseInt(localStorage.getItem('totalPaper')) || 30;
+                totalPaperElement.innerText = totalPaper;
+            }
+        }
+    
+        // Call the function when the page is loaded
+        window.onload = updateTotalPaperOnPage;
+    </script>
 </html>
