--- a/user/pay.html
+++ b/user/pay.html
@@ -5,6 +5,40 @@
         <link rel="stylesheet" href="../style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            .box_1{
+                margin-top: 100px;
+                width: 900px;
+                height: 510px;
+                background-color:  #164399;
+            }
+
+            .message {
+                text-align: center;
+                font-size: 36px;
+                color: #ffffff;
+                margin-top: 20px;
+                margin-bottom: 10px;
+            }
+
+            .box_2{
+                width: 900px;
+                height: 450px;
+                background-color:  #72B1FF;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .box_3{
+                width: 450px;
+                height: 30px;
+                padding: 20px;
+                background-color:  #DBDBDB;
+                margin: 10px 0;
+            }
+        </style>
     </head>
     <body style="overflow-y: auto; height: 100%;">
         <div class="flex" style="justify-content: space-between;">
@@ -38,11 +72,29 @@
             </div>
         </div>
         <div class="flex center flex-column">
-            <div>
-                <div style="font-size: 5rem; font-weight: 600; grid-area: logo;">Who care about these</div>
-            </div>
-            <div>
-                <img src="../HCMCUT.svg" style="width: 400px;" draggable="false">
+            <div class = "box_1">
+                <div class = "message"> Make sure you have an MOMO account </div>
+                <div class="box_2">
+                    <div class="box_3">
+                        <div class="inline-block">
+                            Number to buy:
+                            <input type="number" id="paperCount" name="paperCount" min="1" value="1" oninput="updateTotalCost()">
+                            <span style = "font-size: 18px;justify-content: space-between;align-items: center;">Đơn vị: A4</span>
+                        </div>
+                    </div>
+                    <div class="box_3">
+                        <div class="inline-block">
+                            Total Cost (500 each paper):
+                            <span id="totalCost">500</span> 
+                             VnĐ
+                        </div>
+                    </div>
+                    <a href="momo_payment.html">
+                        <div id="kc-form-buttons" class="form-group">
+                            <input style = "background-color: #5AF64CED; margin-top: 80px;" tabindex="4" type="submit" value="Buy" onclick="updateTotalCost();"/>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
         <footer id="credit">
@@ -55,4 +107,32 @@
         </footer>
     </body>
     <script src="../main.js"></script>
+    <script>
+        function updateTotalCost() {
+            // Get user input
+            var paperCountInput = document.getElementById('paperCount');
+            var paperCount = paperCountInput ? parseInt(paperCountInput.value) : 0;
+
+            // If user input is less than 1, set default values
+            if (paperCount < 1) {
+                paperCount = 1;
+            }
+
+            // Set default total cost
+            var defaultTotalCost = 500;
+
+            // Calculate total cost
+            var totalCost = paperCount * defaultTotalCost;
+
+            // Display total cost
+            var totalCostElement = document.getElementById('totalCost');
+            if (totalCostElement) {
+                totalCostElement.innerText = totalCost;
+            }
+
+            // Save values to Local Storage
+            localStorage.setItem('paperCount', paperCount);
+            localStorage.setItem('totalCost', totalCost);
+        }
+    </script>
 </html>
