--- a/user/success.html
+++ b/user/success.html
@@ -58,7 +58,7 @@
                     </div>
                     <div>
                         <div style="grid-area: lef;">
-                            Loaction:
+                            Location:
                         </div>
                         <div style="grid-area: rig;">
                             B1-311
