--- a/system.html
+++ b/system.html
@@ -34,26 +34,16 @@
                 <li><a href="student.html">Manage Student</a></li>
                 <li><a href="view.html">View Log</a></li>
                 <li><a href="printer.html">Manage Printer</a></li>
-                <li><a href="system.html">Configure System</a></li>
+                <li class="selected"><a href="system.html">Configure System</a></li>
                 <li style="border: none;"><a href="report.html">Reports</a></li>
             </div>
         </div>
-        <div class="flex main" style="height: 100%;">
-            <div class="flex center info flex-column" style="grid-area: info;">
-                <div>Khoa quản lý:</div>
-                <div class="center flex">Khoa Khoa học - Kỹ Thuật Máy tính</div>
-                <div>Đơn vị: CN</div>
-                <div>Lân truy cập gần nhất:</div>
-                <div>09/11/2023</div>
-            </div>
-            <div class="flex center flex-column" style="grid-area: display;">
-                <div>
-                    <div style="font-size: 5rem; font-weight: 600; grid-area: logo;">10:34</div>
-                </div>
-                <div>
-                    <img src="../HCMCUT.svg" style="width: 400px;" draggable="false">
-                </div>
-            </div>
+        <div id="menu" class="flex center mt-60 p-25">
+            <div style="width: 100%;" class="flex center">Default configuration</div>
+        </div>
+        <div class="flex box grid-2">
+            <div style="padding-right: 20px; grid-area: left; border-right: 1px solid black;">Default Pages</div>
+            <div style="grid-area: right;">Types of file</div>
         </div>
         <footer id="credit">
             <div style="grid-area: logo;" class="center flex"><img src="../logo.png" style="width: 100px;" draggable="false"></div>
