--- a/student.html
+++ b/student.html
@@ -33,26 +33,17 @@
             <div class="select-dropdown flex" role="listbox" id="select-dropdown">
                 <li><a href="student.html">Manage Student</a></li>
                 <li><a href="view.html">View Log</a></li>
-                <li><a href="printer.html">Manage Printer</a></li>
+                <li class="selected"><a href="printer.html">Manage Printer</a></li>
                 <li><a href="system.html">Configure System</a></li>
                 <li style="border: none;"><a href="report.html">Reports</a></li>
             </div>
         </div>
-        <div class="flex main" style="height: 100%;">
-            <div class="flex center info flex-column" style="grid-area: info;">
-                <div>Khoa quản lý:</div>
-                <div class="center flex">Khoa Khoa học - Kỹ Thuật Máy tính</div>
-                <div>Đơn vị: CN</div>
-                <div>Lân truy cập gần nhất:</div>
-                <div>09/11/2023</div>
+        <div class="flex center flex-column">
+            <div>
+                <div style="font-size: 5rem; font-weight: 600; grid-area: logo;">Who care about these</div>
             </div>
-            <div class="flex center flex-column" style="grid-area: display;">
-                <div>
-                    <div style="font-size: 5rem; font-weight: 600; grid-area: logo;">10:34</div>
-                </div>
-                <div>
-                    <img src="../HCMCUT.svg" style="width: 400px;" draggable="false">
-                </div>
+            <div>
+                <img src="../HCMCUT.svg" style="width: 400px;" draggable="false">
             </div>
         </div>
         <footer id="credit">
