--- a/admin/student.html
+++ b/admin/student.html
@@ -110,6 +110,20 @@
     .bl{
         height: 80px;
     }
+            .logout {
+    background-color: #007bff;
+    color: white;
+    padding: 20px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease; /* Hiệu ứng mượt mà */
+}
+
+.logout:hover {
+    background-color: #0056b3; /* Màu khi di chuột qua */
+}
             
           </style>
         </head>
