--- a/user/print.html
+++ b/user/print.html
@@ -36,6 +36,55 @@
         .submit-button {
             margin-left: 10px;
         }
+         /* New styles for the printer table */
+    #printerTable {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+
+    #printerTable th,
+    #printerTable td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+    }
+
+    #printerTable th {
+        background-color: #f2f2f2;
+    }
+
+    #printerTable tr:hover {
+        background-color: #f5f5f5;
+    }
+
+    .flex input[type="radio"] {
+        margin-right: 5px;
+    }
+
+    .flex label {
+        cursor: pointer;
+    }
+
+    .flex input[type="radio"]:checked+label {
+        font-weight: bold;
+        color: #3498db; /* Highlight color */
+    }
+
+    .rounded-button.printer-btn {
+        width: 150px;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #3498db;
+        color: #fff;
+        cursor: pointer;
+        border: none;
+        transition: background-color 0.3s;
+    }
+
+    .rounded-button.printer-btn:hover {
+        background-color: #2980b9;
+    }
     </style>
     </head>
     <body style="overflow-y: auto; height: 100%;">
@@ -78,7 +127,7 @@
         </div>
                 </div>
             </div>
-<div style="max-height: 200px; overflow-y: auto; margin-right: -5px;">
+<div style="max-height: 300px; overflow-y: auto; margin-right: -5px;">
 <table style="width: 100%;" border="1" cellspacing="3" bordercolor="blue" bgcolor="white" id="printerTable">
                 <tr>
                     <th rowspan="2"> </th>
@@ -195,9 +244,10 @@
                 </tr>
 	    </table>
         </div>
-        <div class="flex center" style="margin-top: 50px;">
+        <div class="flex center" style="margin-top: 30px;">
                 <div id="kc-form-buttons" class="form-group">
-          		<button class="rounded-button" tabindex="4" onclick="selectPrinter()">Select Printer</button>
+                    <button class="rounded-button printer-btn" tabindex="4" onclick="selectPrinter()">Select Printer</button>
+
         		</div>
         </div>
         <footer id="credit">
@@ -261,7 +311,7 @@ function submitSearch() {
 // Hàm để sắp xếp bảng dựa trên kết quả tìm kiếm
 function sortTable() {
     var printerTable = document.getElementById("printerTable");
-    var rows = Array.from(printerTable.rows).slice(1); // Lấy các dòng, bỏ qua dòng header
+    var rows = Array.from(printerTable.rows).slice(2); // Lấy các dòng, bỏ qua dòng header
 
     var hasMatches = false;
 
